--- a/ios/ReactJbdBms.xcodeproj/xcshareddata/xcschemes/ReactjbdBms.xcscheme
+++ b/ios/ReactJbdBms.xcodeproj/xcshareddata/xcschemes/ReactjbdBms.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ReactJdbBms.app"
-               BlueprintName = "ReactJdbBms"
-               ReferencedContainer = "container:ReactJdbBms.xcodeproj">
+               BuildableName = "ReactJbdBms.app"
+               BlueprintName = "ReactJbdBms"
+               ReferencedContainer = "container:ReactJbdBms.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ReactJdbBmsTests.xctest"
-               BlueprintName = "ReactJdbBmsTests"
-               ReferencedContainer = "container:ReactJdbBms.xcodeproj">
+               BuildableName = "ReactJbdBmsTests.xctest"
+               BlueprintName = "ReactJbdBmsTests"
+               ReferencedContainer = "container:ReactJbdBms.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactJdbBms.app"
-            BlueprintName = "ReactJdbBms"
-            ReferencedContainer = "container:ReactJdbBms.xcodeproj">
+            BuildableName = "ReactJbdBms.app"
+            BlueprintName = "ReactJbdBms"
+            ReferencedContainer = "container:ReactJbdBms.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactJdbBms.app"
-            BlueprintName = "ReactJdbBms"
-            ReferencedContainer = "container:ReactJdbBms.xcodeproj">
+            BuildableName = "ReactJbdBms.app"
+            BlueprintName = "ReactJbdBms"
+            ReferencedContainer = "container:ReactJbdBms.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
