--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactJdbBms",
+  "name": "ReactJbdBms",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "nodejs-mobile-react-native": "^18.20.4",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-ble-manager": "^12.1.3",
+    "react-native-network-info": "^5.2.1",
+    "react-native-webview": "^13.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -35,5 +39,8 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "react-native": {
+    "net": "react-native-tcp-socket"
   }
 }
