--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
       but in fact some manufacturers still need it for BLE to properly work :
       https://stackoverflow.com/a/72370969
     -->
-    <uses-permission android:name="android.permission.BLUETOOTH" tools:remove="android:maxSdkVersion" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <!--
       should normally only be needed on android < 12 if you want to:
       - activate bluetooth programmatically
@@ -16,7 +16,7 @@
       see: https://developer.android.com/guide/topics/connectivity/bluetooth/permissions#discover-local-devices.
       Same as above, may still be wrongly needed by some manufacturers on android 12+.
      -->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" tools:remove="android:maxSdkVersion" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"  />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="28"/>
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" android:maxSdkVersion="30"/>
